fix(lighthouse check): optimize image loading,  fix layout shifts

--- a/src/css/main-nav.css
+++ b/src/css/main-nav.css
@@ -184,6 +184,7 @@ header {
 
 .footer {
     display: flex;
+    min-height: 200px;
     flex-direction: column ;
     gap: 2rem;
     align-items: center;
