--- a/src/css/root.css
+++ b/src/css/root.css
@@ -275,8 +275,10 @@ p, .body {
 .img {
     display: flex;
     width: 100%;
-    height: 100%;
+    height: auto;
+    aspect-ratio: 2/3;
     object-fit: cover;
+    max-height: 800px;
 }
 
 .invisible {
